fixed image allignment, fixed non-chromium wrong padding/margin support, might have fixed team title wrapping, though the css needs some cleanup

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,8 @@
   }
   .content{
     margin-top: 5%;
-    width: 80%;
+    width: 100%;
+    padding: 0 12%;
     height: 90%;
     /*background-color: var(--Turkis);*/
     
@@ -212,9 +213,17 @@
 
   .dualLagNavn{
     text-align: center;
-    margin-top: 40px;
+    padding: 1%;
+
     font-size: 74px;
     color: var(--Hotpink);
+  }
+
+  #no-wrap {
+    white-space: nowrap;
+    padding: 1%;
+    margin-top: 0px;
+    font-size: 2.5vw; /* Responsive font size based on viewport width */
   }
 
   .timerFit{
@@ -441,6 +450,7 @@
 
       .content {
         margin-top: 8%;
+        padding: 0 10%;
       }
     }
 
@@ -477,7 +487,7 @@
 
       .content {
         margin-top: 10%;
-        width: 90%;
+        width: 100%;
       }
     }
     @media (max-width: 1245px) {
@@ -508,9 +518,9 @@
     }
   
     .content {
-      width: 90%;
+      width: 100%;
       flex-flow: column;
-      margin-top: 10%;
+      padding: 0 5%;
     }
 
     .dualContainers{
@@ -560,6 +570,9 @@
       .dualLagNavn{
       margin-top: 5px;
       font-size: 27px;
+    }
+    #no-wrap{
+        font-size: 2.6vw; 
     }
   }
   
